# Ultron

./: .env.example  .gitignore  README.md  pyproject.toml  ruff.toml
config/: arena_benchmarks.yaml  genesis_blueprint.yaml  settings.yaml
tests/: __init__.py  test_agent.py  test_arena.py  test_blueprint.py  test_tools.py
ultron/: __init__.py  __main__.py  main.py
ultron/arena/: __init__.py  __main__.py  leaderboard.py  loader.py  models.py  runner.py  scorers.py  skill_tree.py
ultron/body/: __init__.py  agent.py  blueprint.py  factory.py  llm.py
ultron/core/: __init__.py  logging.py  settings.py
ultron/tools/: __init__.py  registry.py
ultron/tools/builtins/: __init__.py  browse.py  filesystem.py  shell.py
